// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/checkbox/demo/basic.tsx extend context correctly 1`] = `
<div
  class="ant-checkbox-wrapper"
>
  <label
    class="ant-checkbox ant-wave-target"
  >
    <input
      class="ant-checkbox-input"
      type="checkbox"
    />
    <span
      class="ant-checkbox-inner"
    />
    <span>
      Checkbox
    </span>
  </label>
</div>
`;

exports[`renders components/checkbox/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/check-all.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-checkbox-wrapper"
  >
    <label
      class="ant-checkbox ant-checkbox-indeterminate ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
      <span>
        Check all
      </span>
    </label>
  </div>,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-checkbox-group"
  >
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Apple
        </span>
      </label>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Pear
        </span>
      </label>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Orange
        </span>
      </label>
    </div>
  </div>,
]
`;

exports[`renders components/checkbox/demo/check-all.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/controller.tsx extend context correctly 1`] = `
Array [
  <p
    style="margin-bottom: 20px;"
  />,
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
  >
    <label
      class="ant-checkbox ant-wave-target ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
      <span>
        Checked-Enabled
      </span>
    </label>
  </div>,
  <p />,
  <p>
    <button
      class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm"
      type="button"
    >
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm"
      style="margin: 0px 10px;"
      type="button"
    >
      <span>
        Disable
      </span>
    </button>
  </p>,
]
`;

exports[`renders components/checkbox/demo/controller.tsx extend context correctly 2`] = `
[
  "Warning: validateDOMNesting(...): %s cannot appear as a descendant of <%s>.%s",
]
`;

exports[`renders components/checkbox/demo/custom-line-width.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
  >
    <label
      class="ant-checkbox ant-wave-target ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </label>
  </div>,
  <div
    class="ant-checkbox-wrapper"
  >
    <label
      class="ant-checkbox ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </label>
  </div>,
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
  >
    <label
      class="ant-checkbox ant-wave-target ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </label>
  </div>,
  <div
    class="ant-checkbox-wrapper"
  >
    <label
      class="ant-checkbox ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </label>
  </div>,
]
`;

exports[`renders components/checkbox/demo/custom-line-width.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/debug-disable-popover.tsx extend context correctly 1`] = `
<div
  style="padding: 56px;"
>
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled"
  >
    <label
      class="ant-checkbox ant-wave-target ant-checkbox-checked ant-checkbox-disabled"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </label>
  </div>
  <div
    class="ant-popover ant-zoom-big-appear ant-zoom-big-appear-prepare ant-zoom-big ant-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="ant-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    />
    <div
      class="ant-popover-content"
    >
      <div
        class="ant-popover-inner"
        role="tooltip"
      >
        <div
          class="ant-popover-inner-content"
        >
          xxxx
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/debug-disable-popover.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/debug-line.tsx extend context correctly 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    style="border: 1px solid red; margin-bottom: 16px;"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <label
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="light"
          />
          <span
            class="ant-checkbox-inner"
          />
        </label>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        Bamboo
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <label
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="little"
          />
          <span
            class="ant-checkbox-inner"
          />
          <span>
            Little
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
    style="border: 1px solid red; margin-bottom: 16px;"
  >
    <div
      class="ant-space-item"
    >
      <label
        class="ant-radio-wrapper"
      >
        <label
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="light"
          />
          <span
            class="ant-radio-inner"
          />
        </label>
      </label>
    </div>
    <div
      class="ant-space-item"
    >
      <div>
        Bamboo
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <label
        class="ant-radio-wrapper"
      >
        <label
          class="ant-radio ant-wave-target"
        >
          <input
            class="ant-radio-input"
            type="radio"
            value="little"
          />
          <span
            class="ant-radio-inner"
          />
        </label>
        <span>
          Little
        </span>
      </label>
    </div>
  </div>
  <div
    style="border: 1px solid red; margin-bottom: 16px; display: flex; align-items: center;"
  >
    <div
      class="ant-checkbox-wrapper"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="light"
        />
        <span
          class="ant-checkbox-inner"
        />
      </label>
    </div>
    <div>
      Bamboo
    </div>
    <div
      class="ant-checkbox-wrapper"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="little"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Little
        </span>
      </label>
    </div>
  </div>
  <div
    style="border: 1px solid red; margin-bottom: 16px; display: flex; align-items: center;"
  >
    <label
      class="ant-radio-wrapper"
    >
      <label
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="light"
        />
        <span
          class="ant-radio-inner"
        />
      </label>
    </label>
    <div>
      Bamboo
    </div>
    <label
      class="ant-radio-wrapper"
    >
      <label
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="little"
        />
        <span
          class="ant-radio-inner"
        />
      </label>
      <span>
        Little
      </span>
    </label>
  </div>
  <div>
    <div
      class="ant-checkbox-wrapper"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Aligned
        </span>
      </label>
    </div>
  </div>
  <div>
    <div
      class="ant-checkbox-wrapper"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          <span
            style="font-size: 32px;"
          >
            Aligned
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/debug-line.tsx extend context correctly 2`] = `
[
  "Warning: [antd: Checkbox] \`value\` is not a valid prop, do you mean \`checked\`?",
]
`;

exports[`renders components/checkbox/demo/disabled.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <label
      class="ant-checkbox ant-wave-target ant-checkbox-disabled"
    >
      <input
        aria-label="disabled"
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </label>
  </div>,
  <br />,
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <label
      class="ant-checkbox ant-checkbox-indeterminate ant-wave-target ant-checkbox-disabled"
    >
      <input
        aria-label="indeterminate"
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </label>
  </div>,
  <br />,
  <div
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <label
      class="ant-checkbox ant-wave-target ant-checkbox-checked ant-checkbox-disabled"
    >
      <input
        aria-label="defaultChecked"
        checked=""
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </label>
  </div>,
]
`;

exports[`renders components/checkbox/demo/disabled.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/group.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-checkbox-group"
  >
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Apple
        </span>
      </label>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Pear
        </span>
      </label>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Orange
        </span>
      </label>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-checkbox-group"
  >
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Apple
        </span>
      </label>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Pear
        </span>
      </label>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Orange
        </span>
      </label>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-checkbox-group"
  >
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target ant-checkbox-checked ant-checkbox-disabled"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Apple
        </span>
      </label>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target ant-checkbox-disabled"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Pear
        </span>
      </label>
    </div>
    <div
      class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item"
    >
      <label
        class="ant-checkbox ant-wave-target ant-checkbox-disabled"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
        <span>
          Orange
        </span>
      </label>
    </div>
  </div>,
]
`;

exports[`renders components/checkbox/demo/group.tsx extend context correctly 2`] = `[]`;

exports[`renders components/checkbox/demo/layout.tsx extend context correctly 1`] = `
<div
  class="ant-checkbox-group"
  style="width: 100%;"
>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <label
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="A"
          />
          <span
            class="ant-checkbox-inner"
          />
          <span>
            A
          </span>
        </label>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <label
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="B"
          />
          <span
            class="ant-checkbox-inner"
          />
          <span>
            B
          </span>
        </label>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <label
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="C"
          />
          <span
            class="ant-checkbox-inner"
          />
          <span>
            C
          </span>
        </label>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <label
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="D"
          />
          <span
            class="ant-checkbox-inner"
          />
          <span>
            D
          </span>
        </label>
      </div>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <div
        class="ant-checkbox-wrapper"
      >
        <label
          class="ant-checkbox ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="E"
          />
          <span
            class="ant-checkbox-inner"
          />
          <span>
            E
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/checkbox/demo/layout.tsx extend context correctly 2`] = `[]`;
